welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: not found: type color
	def faireV(c:color){ for( n <-1 to 4){ 
                     ^MethodsPicture:16: error: value gauche is not a member of Unit
		avance() gauche() 
                         ^MethodsPicture:21: error: not found: value color
			faireV(color.YELLOW)
                               ^MethodsPicture:22: error: not found: value color
			faireV(color.RED)
                               ^MethodsPicture:23: error: not found: value color
			faireV(color.BLUE)
                               ^MethodsPicture:24: error: not found: value color
			faireV(color.GREEN)
                               ^MethodsPicture:36: error: value gauche is not a member of Unit
					faireV3() gauche() 
                                                  ^MethodsPicture:38: error: value droite is not a member of Unit
						avance() } droite() }
                                                           ^